--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 :root {
-    --text-color: #DBE4EF;
-    --card-front-color: #144480;
-    --card-back-color: #00F4BF;
+    --text-color: #ffa3c7;
+    --card-front-color: #71a9ec;
+    --card-back-color: #a846e0;
 }
 
 body {
