--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,5 @@
 :root {
-    --text-color: #ffa3c7;
+    --text-color: #d8135f;
     --card-front-color: #71a9ec;
     --card-back-color: #a846e0;
 }
