--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 :root {
     --text-color: #f0a2c0;
     --card-front-color: #716acf;
-    --card-back-color: #a846e0;
+    --card-back-color: #bc79e4;
 }
 
 body {
